--- a/Localization/es_ES.xaml
+++ b/Localization/es_ES.xaml
@@ -1,118 +1,118 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:sys="clr-namespace:System;assembly=mscorlib">
+﻿<?xml version="1.0"?>
+<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:sys="clr-namespace:System;assembly=mscorlib">
 
-    <!--  
-    MainView
-    -->
-    <sys:String x:Key="LOCSuccessStory">Success Story</sys:String>
+    <!-- MainView -->
+    
+    <sys:String x:Key="LOCSuccessStory">SuccessStory</sys:String>
     <sys:String x:Key="LOCSuccessStoryAchievements">Logros</sys:String>
 
-    <sys:String x:Key="LOCSuccessStoryNotificationsSteamPrivate">Steam profil is not public</sys:String>
+    <sys:String x:Key="LOCSuccessStoryViewGames">Ver los logros de juegos</sys:String>
+    <sys:String x:Key="LOCSuccessStoryViewGame">Ver los logros del juego</sys:String>
+
+    <sys:String x:Key="LOCSuccessStoryNotificationsSteamPrivate">El perfil de Steam no es público</sys:String>
     <sys:String x:Key="LOCSuccessStoryNotificationsSteamDisabled">Steam is enable then disabled</sys:String>
-    <sys:String x:Key="LOCSuccessStoryNotificationsSteamBadConfig">Bad Steam configuration in SteamLibrary settings</sys:String>
+    <sys:String x:Key="LOCSuccessStoryNotificationsSteamBadConfig">Configuración incorrecta de Steam en los ajustes de SteamLibrary</sys:String>
     <sys:String x:Key="LOCSuccessStoryNotificationsGogDisabled">GOG is enable then disabled</sys:String>
-    <sys:String x:Key="LOCSuccessStoryNotificationsGogNoAuthenticate">GOG user is not authenticated</sys:String>
+    <sys:String x:Key="LOCSuccessStoryNotificationsGogNoAuthenticate">El usuario de GOG no está autenticado</sys:String>
     <sys:String x:Key="LOCSuccessStoryNotificationsOriginDisabled">Origin is enable then disabled</sys:String>
-    <sys:String x:Key="LOCSuccessStoryNotificationsOriginNoAuthenticate">Origin user is not authenticated</sys:String>
+    <sys:String x:Key="LOCSuccessStoryNotificationsOriginNoAuthenticate">El usuario de Origin no está autenticado</sys:String>
     <sys:String x:Key="LOCSuccessStoryNotificationsXboxDisabled">Xbox is enable then disabled</sys:String>
-    <sys:String x:Key="LOCSuccessStoryNotificationsXboxNoAuthenticate">Xbox user is not authenticated</sys:String>
-    <sys:String x:Key="LOCSuccessStoryNotificationsRetroAchievementsBadConfig">Bad RetroAchievements configuration in settings</sys:String>
+    <sys:String x:Key="LOCSuccessStoryNotificationsXboxNotAuthenticate">Xbox user is not authenticated</sys:String>
+    <sys:String x:Key="LOCSuccessStoryNotificationsRetroAchievementsBadConfig">Configuración errónea de RetroAchievements en ajustes</sys:String>
 
-    <!--  
-    SuccessStorySettingsView
-    -->
+    <!-- SuccessStorySettingsView -->
 
-    <sys:String x:Key="LOCSuccessStoryProgressBar">Treatment in progress...</sys:String>
-
+    <sys:String x:Key="LOCSuccessStoryProgressBar">Proceso en curso...</sys:String>
+    
     <sys:String x:Key="LOCSuccessStoryEnableSteam">Habilitar logros de Steam</sys:String>
     <sys:String x:Key="LOCSuccessStoryEnableGog">Habilitar logros de GOG</sys:String>
     <sys:String x:Key="LOCSuccessStoryEnableOrigin">Habilitar logros de Origin</sys:String>
     <sys:String x:Key="LOCSuccessStoryEnableXbox">Habilitar logros de Xbox</sys:String>
     <sys:String x:Key="LOCSuccessStoryEnableRetroAchievements">Habilitar logros de RetroAchievements</sys:String>
 
-    <sys:String x:Key="LOCSuccessStoryEnableRetroAchievementsView">Enable seprate view for RetroAchievements</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableRetroAchievementsView">Habilitar la vista separada para RetroAchievements</sys:String>
 
-    <sys:String x:Key="LOCSuccessStoryIncludeHiddenGames">Incluir juegos ocultos</sys:String>
-    <sys:String x:Key="LOCSuccessStoryAllUnlockedByMonth">Graphic with all unlocked achievements by month</sys:String>
-    <sys:String x:Key="LOCSuccessStoryGameUnlockedByMonth">Graphic with all unlocked achievements by Day</sys:String>
-
-    <sys:String x:Key="LOCSuccessStoryDefaultSorting">Default sorting</sys:String>
-    <sys:String x:Key="LOCMenuSortAscending">Ascending</sys:String>
-
-    <sys:String x:Key="LOCSuccessStoryDatabase">Database manipulation</sys:String>
-    <sys:String x:Key="LOCSuccessStoryGetData">Get data</sys:String>
-    <sys:String x:Key="LOCSuccessStoryRefreshData">Refresh data</sys:String>
+    <sys:String x:Key="LOCSuccessStoryDatabase">Manipulación de la base de datos</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGetData">Obtener datos</sys:String>
     <sys:String x:Key="LOCSuccessStoryRefreshData">Actualizar datos</sys:String>
     <sys:String x:Key="LOCSuccessStoryGetMissing">Get missing</sys:String>
-    <sys:String x:Key="LOCSuccessStoryGetDataRecent">Missing recent achievements</sys:String>
-    <sys:String x:Key="LOCSuccessStoryRefreshAllDataRecent">Actualizar todos los datos de logros recientes</sys:String>
-    <sys:String x:Key="LOCSuccessStoryRefreshAllData">Actualizar todos los datos de logros</sys:String>
-    <sys:String x:Key="LOCSuccessStoryGetAllData">All missing achievements</sys:String>
-    <sys:String x:Key="LOCSuccessStoryGetDataInstalled">Missing from installed games</sys:String>
-    <sys:String x:Key="LOCSuccessStoryRefreshDataInstalledRecent">Achievements from installed games</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGetDataRecent">Faltan logros recientes</sys:String>
+    <sys:String x:Key="LOCSuccessStoryRefreshAllDataRecent">Todos los logros recientes</sys:String>
+    <sys:String x:Key="LOCSuccessStoryRefreshAllData">Todos los logros</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGetAllData">Todos los logros faltantes</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGetDataInstalled">Falta en los juegos instalados</sys:String>
+    <sys:String x:Key="LOCSuccessStoryRefreshDataInstalledRecent">Logros de juegos instalados</sys:String>
 
-    <sys:String x:Key="LOCSuccessStoryIntegration">Interface integration</sys:String>
-    <sys:String x:Key="LOCCommonIntegrationInDescription">On game description</sys:String>
-    <sys:String x:Key="LOCCommonIntegrationButtonIsToggle">With toggle button</sys:String>
-    <sys:String x:Key="LOCCommonIntegrationShowTitle">Show title</sys:String>
-    <sys:String x:Key="LOCSuccessStoryIntegrationShowGraphic">Show graphic</sys:String>
-    <sys:String x:Key="LOCSuccessStoryIntegrationShowAchievements">Show list achievements</sys:String>
-    <sys:String x:Key="LOCSuccessStoryIntegrationTopGameDetails">Above description</sys:String>
-    <sys:String x:Key="LOCSuccessStoryIntegrationToggleDetails">Toggle button with details</sys:String>
-    <sys:String x:Key="LOCCommonIntegrationInCustomTheme">Custom theme integration (if integrated)</sys:String>
-    <sys:String x:Key="LOCCommonIntegrationButton">Add button</sys:String>
-    <sys:String x:Key="LOCCommonIntegrationButtonDetails">Add button with details</sys:String>
-    <sys:String x:Key="LOCCommonIntegrationButtonHeader">Add button in window</sys:String>
-    <sys:String x:Key="LOCSuccessStoryIntegrationShowProgressBar">Show progress bar</sys:String>
-    <sys:String x:Key="LOCSuccessStoryIntegrationShowAchievementsCompactUnlocked">Show compact unlocked list</sys:String>
+    <sys:String x:Key="LOCSuccessStoryIntegrationShowGraphic">Mostrar gráfico</sys:String>
+    <sys:String x:Key="LOCSuccessStoryIntegrationShowAchievements">Mostrar lista de logros</sys:String>
+    <sys:String x:Key="LOCSuccessStoryIntegrationShowProgressBar">Mostrar barra de progreso</sys:String>
+    <sys:String x:Key="LOCSuccessStoryIntegrationShowAchievementsCompactUnlocked">Mostrar lista compacta desbloqueada</sys:String>
     <sys:String x:Key="LOCSuccessStoryIntegrationShowAchievementsCompactLocked">Show compact locked list</sys:String>
 
-    <sys:String x:Key="LOCCommonIntegrationSelectElements">Selection elements</sys:String>
-    <sys:String x:Key="LOCSuccessStoryIntegrationGraphicOptions">Graphic options</sys:String>
+    <sys:String x:Key="LOCSuccessStoryIntegrationGraphicOptions">Opciones Gráficas</sys:String>
     <sys:String x:Key="LOCSuccessStoryIntegrationGraphicOptionsCountAbscissa">Number of data in abscissa</sys:String>
     <sys:String x:Key="LOCSuccessStoryIntegrationGraphicShowLabels">Show abscissa label</sys:String>
     <sys:String x:Key="LOCSuccessStoryIntegrationGraphicShowLabelsOrdinates">Show ordinates label</sys:String>
-    <sys:String x:Key="LOCSuccessStoryIntegrationProgressBarOptions">Progress bar options</sys:String>
-    <sys:String x:Key="LOCSuccessStoryIntegrationProgressBarShowIndicator">Show indicator</sys:String>
-    <sys:String x:Key="LOCSuccessStoryIntegrationProgressBarShowPercent">Show percent</sys:String>
-    <sys:String x:Key="LOCSuccessStoryIntegrationListOptions">List achievements options</sys:String>
+    <sys:String x:Key="LOCSuccessStoryIntegrationProgressBarOptions">Opciones de la barra de progreso</sys:String>
+    <sys:String x:Key="LOCSuccessStoryIntegrationProgressBarShowIndicator">Mostrar indicador</sys:String>
+    <sys:String x:Key="LOCSuccessStoryIntegrationProgressBarShowPercent">Mostrar porcentaje</sys:String>
+    <sys:String x:Key="LOCSuccessStoryIntegrationListOptions">Opciones de lista de logros</sys:String>
+
+    <sys:String x:Key="LOCSuccessStoryViewsSettings">Vista de extensión</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableRaretyIndicator">Mostrar indicador de rareza en el logro</sys:String>
+    <sys:String x:Key="LOCSuccessStoryListGames">Lista de Juegos</sys:String>
+    <sys:String x:Key="LOCSuccessStoryDefaultSorting">Orden por defecto</sys:String>
+    <sys:String x:Key="LOCSuccessStoryChartWithAllAchievements">Gráfico con todos los logros</sys:String>
+
+    <sys:String x:Key="LOCSuccessStoryListGamesFields">Campos de juego a mostrar:</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGamesIcon100Percent">Icon 100% achievements</sys:String>
+
+    <sys:String x:Key="LOCSuccessStoryIncludeHiddenGames">Incluir juegos ocultos</sys:String>
+    <sys:String x:Key="LOCSuccessStoryAllUnlockedByMonth">Gráfico con todos los logros desbloqueados por mes</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGameUnlockedByMonth">Gráfico con todos los logros desbloqueados por día</sys:String>
 
     <sys:String x:Key="LOCSuccessStoryRefreshDataMessage">La base de datos de logros se ha restablecido.</sys:String>
 
-    <sys:String x:Key="LOCSuccessStoryGetMissingToolTip" xml:space="preserve">Get the game achievements weren't downloaded in this store.&#x0a;(use if the first number count is different to second)</sys:String>
-    <sys:String x:Key="LOCSuccessStoryRefreshDataToolTip" xml:space="preserve">Reset and download achievements for all games in this store.&#x0a;(use if there are some problems with achievements)</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGetMissingToolTip" xml:space="preserve">Obtener los logros del juego que no fueron descargados en esta tienda.
+(usar si el primer número de números es diferente a segundo)</sys:String>
+    <sys:String x:Key="LOCSuccessStoryRefreshDataToolTip" xml:space="preserve">Restablecer y descargar logros para todos los juegos en esta tienda.
+(usar si hay algún problema con los logros)</sys:String>
+    
+    <sys:String x:Key="LOCSuccessStoryGetDataRecentToolTip" xml:space="preserve">Obtener los logros del juego no se descargaron en el mes de deslizamiento.
+(úsalo si el primer número de números es diferente al segundo)</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGetDataInstalledToolTip" xml:space="preserve">Get the game achievements weren't downloaded for installed games.
+(use if the first number count is different to second)</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGetAllDataToolTip" xml:space="preserve">Get the game achievements weren't downloaded.
+(use if the first number count is different to second)</sys:String>
 
-    <sys:String x:Key="LOCSuccessStoryGetDataRecentToolTip" xml:space="preserve">Get the game achievements weren't downloaded in slippery month.&#x0a;(use if the first number count is different to second)</sys:String>
-    <sys:String x:Key="LOCSuccessStoryGetDataInstalledToolTip" xml:space="preserve">Get the game achievements weren't downloaded for installed games.&#x0a;(use if the first number count is different to second)</sys:String>
-    <sys:String x:Key="LOCSuccessStoryGetAllDataToolTip" xml:space="preserve">Get the game achievements weren't downloaded.&#x0a;(use if the first number count is different to second)</sys:String>
+    <sys:String x:Key="LOCSuccessStoryRefreshAllDataRecentToolTip" xml:space="preserve">Restablecer y descargar logros para todos los juegos en esta tienda.
+(usar si hay algún problema con los logros)</sys:String>
+    <sys:String x:Key="LOCSuccessStoryRefreshDataInstalledRecentToolTip" xml:space="preserve">Restablecer y descargar logros para todos los juegos en esta tienda.
+(usar si hay algún problema con los logros)</sys:String>
+    <sys:String x:Key="LOCSuccessStoryRefreshAllDataToolTip" xml:space="preserve">Restablecer y descargar logros para todos los juegos en esta tienda.
+(usar si hay algún problema con los logros)</sys:String>
 
-    <sys:String x:Key="LOCSuccessStoryRefreshAllDataRecentToolTip" xml:space="preserve">Reset and download achievements in slippery month.&#x0a;(use if there are some problems with achievements)</sys:String>
-    <sys:String x:Key="LOCSuccessStoryRefreshDataInstalledRecentToolTip" xml:space="preserve">Reset and download achievements for installed games.&#x0a;(use if there are some problems with achievements)</sys:String>
-    <sys:String x:Key="LOCSuccessStoryRefreshAllDataToolTip" xml:space="preserve">Reset and download achievements for all games.&#x0a;(use if there are some problems with achievements)</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableImageCache">Enable caching achievements images (experimental) *</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableImageCacheToolTip" xml:space="preserve">Experimental non-blocking process which can increase memory usage a bit when caching only.
+Especially useful for Xbox achievements  with their larges images which are reduced when caching.</sys:String>
 
-    <!-- 
-    SuccessStoryView 
-    -->
+    <!-- SuccessStoryView -->
 
     <!-- UI -->
-    <sys:String x:Key="LOCSuccessStoryFilterSource">Filter by source</sys:String>
-    <sys:String x:Key="LOCSearchLabel">Buscar</sys:String>
+    
+    <sys:String x:Key="LOCSuccessStoryFilterSource">Filtrar por fuente</sys:String>
     <sys:String x:Key="LOCSuccessStoryGlobalProgression">Progresión global</sys:String>
-    <sys:String x:Key="LOCSuccessStoryProgressionLaunched">Progression [games launched]</sys:String>
+    <sys:String x:Key="LOCSuccessStoryProgressionLaunched">Progresión [juegos lanzados]</sys:String>
     <sys:String x:Key="LOCSuccessStoryGameInformation">Información</sys:String>
 
     <!-- ListViewGames -->
-    <sys:String x:Key="LOCGameIconTitle">Icono</sys:String>
-    <sys:String x:Key="LOCGameNameTitle">Nombre</sys:String>
-    <sys:String x:Key="LOCLastPlayed">Última sesión iniciada</sys:String>
-    <sys:String x:Key="LOCSourceLabel">Fuente</sys:String>
+    
     <sys:String x:Key="LOCSuccessStorylvGamesProgression">Progresión</sys:String>
 
     <sys:String x:Key="LOCSuccessStoryGraphicTitleALL">Todos los logros desbloqueados por mes</sys:String>
-    <sys:String x:Key="LOCSuccessStoryGraphicTitleALLDay">All achievements unlocked by day</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGraphicTitleALLDay">Logros desbloqueados por día</sys:String>
     <sys:String x:Key="LOCSuccessStoryGraphicTitle">Logros desbloqueados por mes</sys:String>
-    <sys:String x:Key="LOCSuccessStoryGraphicTitleSources">Achievements unlocked by sources</sys:String>
-    <sys:String x:Key="LOCSuccessStoryGraphicTitleDay">Achievements unlocked by day</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGraphicTitleSources">Logros desbloqueados por fuentes</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGraphicTitleDay">Logros desbloqueados por día</sys:String>
     
 </ResourceDictionary>
