--- a/Localization/pl_PL.xaml
+++ b/Localization/pl_PL.xaml
@@ -1,12 +1,13 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:sys="clr-namespace:System;assembly=mscorlib">
+﻿<?xml version="1.0"?>
+<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:sys="clr-namespace:System;assembly=mscorlib">
 
-    <!--  
-    MainView
-    -->
+    <!-- MainView -->
+    
     <sys:String x:Key="LOCSuccessStory">Historia sukcesu</sys:String>
     <sys:String x:Key="LOCSuccessStoryAchievements">Osiągnięcia</sys:String>
+
+    <sys:String x:Key="LOCSuccessStoryViewGames">View the games achievements</sys:String>
+    <sys:String x:Key="LOCSuccessStoryViewGame">View the game achievements</sys:String>
 
     <sys:String x:Key="LOCSuccessStoryNotificationsSteamPrivate">Steam profil is not public</sys:String>
     <sys:String x:Key="LOCSuccessStoryNotificationsSteamDisabled">Steam is enable then disabled</sys:String>
@@ -16,33 +17,23 @@
     <sys:String x:Key="LOCSuccessStoryNotificationsOriginDisabled">Origin is enable then disabled</sys:String>
     <sys:String x:Key="LOCSuccessStoryNotificationsOriginNoAuthenticate">Origin user is not authenticated</sys:String>
     <sys:String x:Key="LOCSuccessStoryNotificationsXboxDisabled">Xbox is enable then disabled</sys:String>
-    <sys:String x:Key="LOCSuccessStoryNotificationsXboxNoAuthenticate">Xbox user is not authenticated</sys:String>
+    <sys:String x:Key="LOCSuccessStoryNotificationsXboxNotAuthenticate">Xbox user is not authenticated</sys:String>
     <sys:String x:Key="LOCSuccessStoryNotificationsRetroAchievementsBadConfig">Bad RetroAchievements configuration in settings</sys:String>
 
-    <!--  
-    SuccessStorySettingsView
-    -->
+    <!-- SuccessStorySettingsView -->
 
     <sys:String x:Key="LOCSuccessStoryProgressBar">Treatment in progress...</sys:String>
-
+    
     <sys:String x:Key="LOCSuccessStoryEnableSteam">Uaktywnij Steam</sys:String>
     <sys:String x:Key="LOCSuccessStoryEnableGog">Uaktywnij GOG</sys:String>
     <sys:String x:Key="LOCSuccessStoryEnableOrigin">Uaktywnij Origin</sys:String>
     <sys:String x:Key="LOCSuccessStoryEnableXbox">Uaktywnij Xbox</sys:String>
     <sys:String x:Key="LOCSuccessStoryEnableRetroAchievements">Uaktywnij RetroAchievements</sys:String>
 
-    <sys:String x:Key="LOCSuccessStoryEnableRetroAchievementsView">Enable seprate view for RetroAchievements</sys:String>
-
-    <sys:String x:Key="LOCSuccessStoryIncludeHiddenGames">Uwzględniaj ukryte gry</sys:String>
-    <sys:String x:Key="LOCSuccessStoryAllUnlockedByMonth">Grafika ze wszystkimi odblokowanymi osiągnięciami według miesiąca</sys:String>
-    <sys:String x:Key="LOCSuccessStoryGameUnlockedByMonth">Grafika ze wszystkimi odblokowanymi osiągnięciami według dnia</sys:String>
-
-    <sys:String x:Key="LOCSuccessStoryDefaultSorting">Sortowanie domyślne</sys:String>
-    <sys:String x:Key="LOCMenuSortAscending">Rosnąco</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableRetroAchievementsView">Enable separate view for RetroAchievements</sys:String>
 
     <sys:String x:Key="LOCSuccessStoryDatabase">Manipulacja bazą danych</sys:String>
     <sys:String x:Key="LOCSuccessStoryGetData">Wczytaj dane</sys:String>
-    <sys:String x:Key="LOCSuccessStoryRefreshData">Odśwież dane</sys:String>
     <sys:String x:Key="LOCSuccessStoryRefreshData">Odśwież dane</sys:String>
     <sys:String x:Key="LOCSuccessStoryGetMissing">Wczytaj brakujące</sys:String>
     <sys:String x:Key="LOCSuccessStoryGetDataRecent">Brakujące najnowsze osiągnięcia</sys:String>
@@ -52,23 +43,12 @@
     <sys:String x:Key="LOCSuccessStoryGetDataInstalled">Brakujące spośród zainstalowanych gier</sys:String>
     <sys:String x:Key="LOCSuccessStoryRefreshDataInstalledRecent">Osiągnięcia z zainstalowanych gier</sys:String>
 
-    <sys:String x:Key="LOCSuccessStoryIntegration">Integracja interfejsu</sys:String>
-    <sys:String x:Key="LOCCommonIntegrationInDescription">W opisie gry</sys:String>
-    <sys:String x:Key="LOCCommonIntegrationButtonIsToggle">Z przyciskiem przełączającym</sys:String>
-    <sys:String x:Key="LOCCommonIntegrationShowTitle">Wyświetlaj tytuł</sys:String>
     <sys:String x:Key="LOCSuccessStoryIntegrationShowGraphic">Wyświetlaj grafikę</sys:String>
     <sys:String x:Key="LOCSuccessStoryIntegrationShowAchievements">Wyświetlaj listę osiągnięć</sys:String>
-    <sys:String x:Key="LOCSuccessStoryIntegrationTopGameDetails">Nad opisem</sys:String>
-    <sys:String x:Key="LOCSuccessStoryIntegrationToggleDetails">Przełącznik ze szczegółami</sys:String>
-    <sys:String x:Key="LOCCommonIntegrationInCustomTheme">Integracja z niestandardowym motywem (jeśli jest zintegrowany)</sys:String>
-    <sys:String x:Key="LOCCommonIntegrationButton">Dodaj przycisk</sys:String>
-    <sys:String x:Key="LOCCommonIntegrationButtonDetails">Dodaj przycisk ze szczegółami</sys:String>
-    <sys:String x:Key="LOCCommonIntegrationButtonHeader">Dodaj przycisk w oknie</sys:String>
     <sys:String x:Key="LOCSuccessStoryIntegrationShowProgressBar">Wyświetlaj pasek postępu</sys:String>
     <sys:String x:Key="LOCSuccessStoryIntegrationShowAchievementsCompactUnlocked">Show compact unlocked list</sys:String>
     <sys:String x:Key="LOCSuccessStoryIntegrationShowAchievementsCompactLocked">Show compact locked list</sys:String>
 
-    <sys:String x:Key="LOCCommonIntegrationSelectElements">Selection elements</sys:String>
     <sys:String x:Key="LOCSuccessStoryIntegrationGraphicOptions">Graphic options</sys:String>
     <sys:String x:Key="LOCSuccessStoryIntegrationGraphicOptionsCountAbscissa">Number of data in abscissa</sys:String>
     <sys:String x:Key="LOCSuccessStoryIntegrationGraphicShowLabels">Show abscissa label</sys:String>
@@ -78,35 +58,55 @@
     <sys:String x:Key="LOCSuccessStoryIntegrationProgressBarShowPercent">Z procentem</sys:String>
     <sys:String x:Key="LOCSuccessStoryIntegrationListOptions">List achievements options</sys:String>
 
+    <sys:String x:Key="LOCSuccessStoryViewsSettings">Extension view</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableRaretyIndicator">Show rarety indicator on achievement</sys:String>
+    <sys:String x:Key="LOCSuccessStoryListGames">Lista gier</sys:String>
+    <sys:String x:Key="LOCSuccessStoryDefaultSorting">Sortowanie domyślne</sys:String>
+    <sys:String x:Key="LOCSuccessStoryChartWithAllAchievements">Chart with all achievements</sys:String>
+
+    <sys:String x:Key="LOCSuccessStoryListGamesFields">Game fields to be displayed:</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGamesIcon100Percent">Icon 100% achievements</sys:String>
+
+    <sys:String x:Key="LOCSuccessStoryIncludeHiddenGames">Uwzględniaj ukryte gry</sys:String>
+    <sys:String x:Key="LOCSuccessStoryAllUnlockedByMonth">Grafika ze wszystkimi odblokowanymi osiągnięciami według miesiąca</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGameUnlockedByMonth">Grafika ze wszystkimi odblokowanymi osiągnięciami według dnia</sys:String>
+
     <sys:String x:Key="LOCSuccessStoryRefreshDataMessage">Baza danych osiągnieć została zresetowana.</sys:String>
 
-    <sys:String x:Key="LOCSuccessStoryGetMissingToolTip" xml:space="preserve">Wczytuje osiągniecia, które nie zostały pobrane z tego sklepu.&#x0a;(skorzystaj z tego, jeśli pierwsza liczba jest inna niż druga)</sys:String>
-    <sys:String x:Key="LOCSuccessStoryRefreshDataToolTip" xml:space="preserve">Resetuje i pobiera osiągnięcia dla wszystkich gier z tego sklepu.&#x0a;(skorzystaj z tego, jeżeli są problemy z osiągnięciami)</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGetMissingToolTip" xml:space="preserve">Wczytuje osiągniecia, które nie zostały pobrane z tego sklepu.
+(skorzystaj z tego, jeśli pierwsza liczba jest inna niż druga)</sys:String>
+    <sys:String x:Key="LOCSuccessStoryRefreshDataToolTip" xml:space="preserve">Resetuje i pobiera osiągnięcia dla wszystkich gier z tego sklepu.
+(skorzystaj z tego, jeżeli są problemy z osiągnięciami)</sys:String>
     
-    <sys:String x:Key="LOCSuccessStoryGetDataRecentToolTip" xml:space="preserve">Wczytuje osiągnięcia, które nie zostały pobrane w śliskim miesiącu.&#x0a;(skorzystaj z tego, jeśli pierwsza liczba jest inna niż druga)</sys:String>
-    <sys:String x:Key="LOCSuccessStoryGetDataInstalledToolTip" xml:space="preserve">Wczytuje osiągnięcia, które nie zostały pobrane dla zainstalowanych gier.&#x0a;(skorzystaj z tego, jeśli pierwsza liczba jest inna niż druga)</sys:String>
-    <sys:String x:Key="LOCSuccessStoryGetAllDataToolTip" xml:space="preserve">Wczytuje osiągnięcia, które nie zostały pobrane.&#x0a;(skorzystaj z tego, jeśli pierwsza liczba jest inna niż druga)</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGetDataRecentToolTip" xml:space="preserve">Wczytuje osiągnięcia, które nie zostały pobrane w śliskim miesiącu.
+(skorzystaj z tego, jeśli pierwsza liczba jest inna niż druga)</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGetDataInstalledToolTip" xml:space="preserve">Wczytuje osiągnięcia, które nie zostały pobrane dla zainstalowanych gier.
+(skorzystaj z tego, jeśli pierwsza liczba jest inna niż druga)</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGetAllDataToolTip" xml:space="preserve">Wczytuje osiągnięcia, które nie zostały pobrane.
+(skorzystaj z tego, jeśli pierwsza liczba jest inna niż druga)</sys:String>
 
-    <sys:String x:Key="LOCSuccessStoryRefreshAllDataRecentToolTip" xml:space="preserve">Resetuje i pobiera osiągnięcia w śliskim miesiącu.&#x0a;(skorzystaj z tego, jeżeli są problemy z osiągnięciami)</sys:String>
-    <sys:String x:Key="LOCSuccessStoryRefreshDataInstalledRecentToolTip" xml:space="preserve">Resetuje i pobiera osiągnięcia dla wszystkich zainstalowanych gier.&#x0a;(skorzystaj z tego, jeżeli są problemy z osiągnięciami)</sys:String>
-    <sys:String x:Key="LOCSuccessStoryRefreshAllDataToolTip" xml:space="preserve">Resetuje i pobiera osiągnięcia dla wszystkich gier.&#x0a;(skorzystaj z tego, jeżeli są problemy z osiągnięciami)</sys:String>
+    <sys:String x:Key="LOCSuccessStoryRefreshAllDataRecentToolTip" xml:space="preserve">Resetuje i pobiera osiągnięcia w śliskim miesiącu.
+(skorzystaj z tego, jeżeli są problemy z osiągnięciami)</sys:String>
+    <sys:String x:Key="LOCSuccessStoryRefreshDataInstalledRecentToolTip" xml:space="preserve">Resetuje i pobiera osiągnięcia dla wszystkich zainstalowanych gier.
+(skorzystaj z tego, jeżeli są problemy z osiągnięciami)</sys:String>
+    <sys:String x:Key="LOCSuccessStoryRefreshAllDataToolTip" xml:space="preserve">Resetuje i pobiera osiągnięcia dla wszystkich gier.
+(skorzystaj z tego, jeżeli są problemy z osiągnięciami)</sys:String>
 
-    <!-- 
-    SuccessStoryView 
-    -->
+    <sys:String x:Key="LOCSuccessStoryEnableImageCache">Enable caching achievements images (experimental) *</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableImageCacheToolTip" xml:space="preserve">Experimental non-blocking process which can increase memory usage a bit when caching only.
+Especially useful for Xbox achievements  with their larges images which are reduced when caching.</sys:String>
+
+    <!-- SuccessStoryView -->
 
     <!-- UI -->
+    
     <sys:String x:Key="LOCSuccessStoryFilterSource">Filtruj wg źródła</sys:String>
-    <sys:String x:Key="LOCSearchLabel">Szukaj</sys:String>
     <sys:String x:Key="LOCSuccessStoryGlobalProgression">Ogólny postęp</sys:String>
     <sys:String x:Key="LOCSuccessStoryProgressionLaunched">Progression [games launched]</sys:String>
     <sys:String x:Key="LOCSuccessStoryGameInformation">Informacja</sys:String>
 
     <!-- ListViewGames -->
-    <sys:String x:Key="LOCGameIconTitle">Ikona</sys:String>
-    <sys:String x:Key="LOCGameNameTitle">Nazwa</sys:String>
-    <sys:String x:Key="LOCLastPlayed">Ostatnia sesja</sys:String>
-    <sys:String x:Key="LOCSourceLabel">Źródło</sys:String>
+    
     <sys:String x:Key="LOCSuccessStorylvGamesProgression">Postęp</sys:String>
 
     <sys:String x:Key="LOCSuccessStoryGraphicTitleALL">Wszystkie odblokowane osiągnięcia według miesiąca</sys:String>
